--- a/_make_pdf.qmd
+++ b/_make_pdf.qmd
@@ -4,6 +4,7 @@ subtitle: "(inkl. Einführung in die 3D Modelierung mit Blender)"
 format:
   pdf:
     documentclass: book
+    lang: de
     toc: true
     toc-depth: 2
     number-sections: true
@@ -12,8 +13,38 @@ format:
     output-ext:  "pdf"
     header-includes:
     - \renewcommand{\familydefault}{\sfdefault}
+    - \newcommand{\kbd}[1]{\fbox{\texttt{#1}}}
+
+    include-in-header:
+    - "styles.tex"
 editor: source
 ---
+
+```{r}
+#| echo: false
+#| eval: true
+
+##### To-Do
+## Content at beginning
+# Title Page
+# Introduction
+# Aknowledgment
+# Link to Web-Page
+
+## Layout
+# One sided layout
+
+## Margins
+# Adjust placing
+
+## Images
+# Adjust Size
+
+## Boxes
+# Adjust Boxes
+
+```
+
 
 ```{r}
 #| echo: false
@@ -73,6 +104,56 @@ process_qmd <- function(file, fpath_in = "", fpath_out = "") {
     out_doc <- out_doc[keep]
   }
   
+  ### Ersetze "column-margin" Blöcke durch \marginnote{...}
+  # Finde Startindizes der Blöcke
+  cm_start <- grep("^:::\\s*column-margin", out_doc)
+  
+  # Die Schleife arbeitet rückwärts, damit Indizes nach Ersetzungen nicht durcheinander kommen
+  if(length(cm_start) > 0){
+    for(i in rev(seq_along(cm_start))) {
+      s <- cm_start[i]
+      # Finde das Ende des Blocks: die nächste Zeile, die nur ":::" enthält
+      # (Dabei wird angenommen, dass zwischen dem Start und Ende der Blockinhalt liegt)
+      e_candidates <- which(out_doc[(s+1):length(out_doc)] == ":::")
+      if(length(e_candidates) == 0) next  # Falls kein Ende gefunden, überspringen
+      e <- s + e_candidates[1]
+      
+      # Inhalt zwischen Start und Ende zusammenfassen
+      # (Hier wird angenommen, dass der Inhalt in den Zeilen s+1 bis e-1 steht)
+      content <- paste(out_doc[(s+1):(e-1)], collapse = " ")
+      
+      # Ersetze den ganzen Block mit \marginnote{...}
+      replacement <- paste0("\\marginnote{", content, "}")
+      
+      # Ersetze die Zeilen im Dokument:
+      # Erhalte den Teil vor dem Block, füge die Ersetzung hinzu und dann den Rest des Dokuments.
+      out_doc <- c(out_doc[1:(s-1)], replacement, out_doc[(e+1):length(out_doc)])
+    }
+  }
+  
+  
+  
+   
+  ### Ersetze kbd-Tags in LaTeX kbd-Style
+  # Finde den regulären Ausdruck, der den kbd-Tag im Format "{{< kbd ... >}}" erfasst
+  # Er geht davon aus, dass sich nach "kbd" ein oder mehrere Wörter (Tasten) befinden, die durch Leerzeichen getrennt sind.
+  kbd_pattern <- "\\{\\{<\\s*kbd\\s+([^>]+)\\s*>\\}\\}"
+  
+  # Iteriere über alle Zeilen und ersetze alle Vorkommnisse
+  out_doc <- sapply(out_doc, function(line) {
+    stringr::str_replace_all(line, kbd_pattern, function(match) {
+      # Extrahiere den Inhalt des kbd-Tags (alles zwischen "kbd" und der schließenden Markierung)
+      key_text <- stringr::str_match(match, kbd_pattern)[,2]
+      # Entferne führende und folgende Leerzeichen und splitte in einzelne Tasten
+      keys <- unlist(strsplit(trimws(key_text), "\\s+"))
+      # Verbinde ggf. mehrere Tasten mit einem "+"
+      joined_keys <- paste(keys, collapse = " + ")
+      # Erzeuge den LaTeX-Befehl \kbd{...}
+      paste0("\\kbd{", joined_keys, "}")
+    })
+  }, USE.NAMES = FALSE)
+  
+  
   
   # If a title was found, add the title in combination with a markdown-header (#) at the beginning
   if (title != "") {
@@ -108,7 +189,7 @@ numbers <- as.integer(stringr::str_extract(basename(files), "(?<=Chapter_)[0-9]+
 files <- files[order(numbers)]
 
 # For all chapter-files
-for (fileindex in 1:7){
+for (fileindex in 1:3){
   # Get the current chapter-file
   current_file <- files[fileindex]
   
